--- a/product.html
+++ b/product.html
@@ -68,27 +68,27 @@
           <div class="img-box">
             <img src="/images/photos/john-vicente-KoPST4OEEQA-unsplash.jpg" alt="">
           </div>
-          <div class="options-box">
-            <div class="colours">
-              <div class="swatch one"></div>
-              <div class="swatch two"></div>
-              <div class="swatch three"></div>
+          <div class="options-box flex-column">
+            <div class="colours-box">
+              <div class="flex-row">
+                <h1 class="title-text">choose your jacket color</h1>
+              </div>
+              <div class="flex-row">
+                <div class="swatch one"></div>
+                <div class="swatch two"></div>
+                <div class="swatch three"></div>
+              </div>
             </div>
-            <div class="box-size">
-              <div class="size">
-                <h2>xs</h2>
+            <div class="sizes-box flex-column">
+              <div class="flex-row">
+                <h1 class="title-text">choose your jacket size</h1>
               </div>
-              <div class="size">
-                <h2>s</h2>
-              </div>
-              <div class="size">
-                <h2>m</h2>
-              </div>
-              <div class="size">
-                <h2>l</h2>
-              </div>
-              <div class="size">
-                <h2>xl</h2>
+              <div class="flex-row">
+                <div class="size"><h2>xs</h2></div>
+                <div class="size"><h2>s</h2></div>
+                <div class="size"><h2>m</h2></div>
+                <div class="size"><h2>l</h2></div>
+                <div class="size"><h2>xl</h2></div>
               </div>
             </div>
           </div>
