--- a/jackets.html
+++ b/jackets.html
@@ -153,7 +153,7 @@
           </div>
           <div class="text">
             <a href="product.html" class="btn">
-              <h3>Dizela</h3>
+              <h3>Artemis</h3>
             </a>
           </div>
         </div>
