--- a/jackets.html
+++ b/jackets.html
@@ -66,101 +66,119 @@
       <div class="title">
         <h1 class="title-text">choose the one jacket you can trust</h1>
       </div>
-      <div class="content">
-        <div class="box">
-          <div class="img-box">
-            <img src="/images/photos/blake-lisk-swdM6_NFnCs-unsplash.jpg" alt="">
-          </div>
-          <div class="text">
-            <a href="product.html" class="btn">
-              <h3>Calderon</h3>
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="/images/photos/john-vicente-KoPST4OEEQA-unsplash.jpg" alt="">
-          </div>
-          <div class="text">
-            <a href="product.html" class="btn">
-              <h3>Begsby</h3>
-            </a>
+      <div class="content products">
+        <!-- <div class="item">
+          <div class="box">
+            <div class="img-box">
+              <img src="/images/photos/blake-lisk-swdM6_NFnCs-unsplash.jpg" alt="">
+            </div>
+            <div class="text">
+              <a href="product.html" class="btn">
+                <h3>Calderon</h3>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="/images/photos/janko-ferlic-_A1V4vuyXWM-unsplash.jpg" alt="">
-          </div>
-          <div class="text">
-            <a href="product.html" class="btn">
-              <h3>Aeiron</h3>
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="/images/photos/kal-visuals-6TIoPIpMvLc-unsplash.jpg" alt="">
-          </div>
-          <div class="text">
-            <a href="product.html" class="btn">
-              <h3>Vendela</h3>
-            </a>
+        <div class="item">
+          <div class="box">
+            <div class="img-box">
+              <img src="/images/photos/john-vicente-KoPST4OEEQA-unsplash.jpg" alt="">
+            </div>
+            <div class="text">
+              <a href="product.html" class="btn">
+                <h3>Begsby</h3>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="/images/photos/daniel-lincoln-kTChmgdTkwE-unsplash.jpg" alt="">
-          </div>
-          <div class="text">
-            <a href="product.html" class="btn">
-              <h3>Gedola</h3>
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="/images/photos/dmitry-kara-YVkUmYAIJ5Y-unsplash.jpg" alt="">
-          </div>
-          <div class="text">
-            <a href="product.html" class="btn">
-              <h3>Edilaso</h3>
-            </a>
+        <div class="item">
+          <div class="box">
+            <div class="img-box">
+              <img src="/images/photos/janko-ferlic-_A1V4vuyXWM-unsplash.jpg" alt="">
+            </div>
+            <div class="text">
+              <a href="product.html" class="btn">
+                <h3>Aeiron</h3>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="">
-          </div>
-          <div class="text">
-            <a href="product.html" class="btn">
-              <h3>Selinium</h3>
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="/images/photos/erik-brolin-2_cIV9J4NT8-unsplash.jpg" alt="">
-          </div>
-          <div class="text">
-            <a href="product.html" class="btn">
-              <h3>Dizela</h3>
-            </a>
+        <div class="item">
+          <div class="box">
+            <div class="img-box">
+              <img src="/images/photos/kal-visuals-6TIoPIpMvLc-unsplash.jpg" alt="">
+            </div>
+            <div class="text">
+              <a href="product.html" class="btn">
+                <h3>Vendela</h3>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="/images/photos/fil-mazzarino-7IimdEvrXH4-unsplash.jpg" alt="">
-          </div>
-          <div class="text">
-            <a href="product.html" class="btn">
-              <h3>Artemis</h3>
-            </a>
+        <div class="item">
+          <div class="box">
+            <div class="img-box">
+              <img src="/images/photos/daniel-lincoln-kTChmgdTkwE-unsplash.jpg" alt="">
+            </div>
+            <div class="text">
+              <a href="product.html" class="btn">
+                <h3>Gedola</h3>
+              </a>
+            </div>
           </div>
         </div>
+        <div class="item">
+          <div class="box">
+            <div class="img-box">
+              <img src="/images/photos/dmitry-kara-YVkUmYAIJ5Y-unsplash.jpg" alt="">
+            </div>
+            <div class="text">
+              <a href="product.html" class="btn">
+                <h3>Edilaso</h3>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="box">
+            <div class="img-box">
+              <img src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="">
+            </div>
+            <div class="text">
+              <a href="product.html" class="btn">
+                <h3>Selinium</h3>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="box">
+            <div class="img-box">
+              <img src="/images/photos/erik-brolin-2_cIV9J4NT8-unsplash.jpg" alt="">
+            </div>
+            <div class="text">
+              <a href="product.html" class="btn">
+                <h3>Dizela</h3>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="box">
+            <div class="img-box">
+              <img src="/images/photos/fil-mazzarino-7IimdEvrXH4-unsplash.jpg" alt="">
+            </div>
+            <div class="text">
+              <a href="product.html" class="btn">
+                <h3>Artemis</h3>
+              </a>
+            </div>
+          </div>
+        </div> -->
       </div>
     </section>
   </main>
+  <script src="/js/jackets.js" type="module"></script>
   <script src="/js/main.js"></script>
 </body>
-
 </html>
