--- a/jackets.html
+++ b/jackets.html
@@ -176,6 +176,11 @@
           </div>
         </div> -->
       </div>
+      <div class="cart">
+        <div class="cart-list"></div>
+        <div class="total"><h4>Total:</h4></div>
+        <a href="cart.html"><p>Checkout</p></a>
+      </div>
     </section>
   </main>
   <script src="/js/jackets.js" type="module"></script>
