--- a/cart.html
+++ b/cart.html
@@ -71,7 +71,7 @@
 			<div class="cart-list"></div>
 			<div class="total"></div>
 		</main>
-		<script src="/js/jackets.js" type="module"></script>
+		<script src="/js/cart.js" type="module"></script>
 		<script src="/js/main.js" type="module"></script>
 	</body>
 </html>
