--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,29 @@
 			<div class="container">
         <div class="form">
           <div class="contact-info"></div>
-          <div class="contact-form"></div>
+            
+          <div class="contact-form">
+            <form action="">
+              <h3 class="form-title">Contact us!</h3>
+              <div class="input-container">
+                <input type="text" name="name" class="input">
+                <label for="">Name</label>
+              </div>
+              <div class="input-container">
+                <input type="email" name="email" class="input">
+                <label for="">Email</label>
+              </div>
+              <div class="input-container">
+                <input type="tel" name="phone" class="input">
+                <label for="">Phone</label>
+              </div>
+              <div class="input-container textarea">
+                <textarea name="message" class="input" cols="22" rows="5"></textarea>
+                <label for="">Message</label>
+              </div>
+              <input type="submit" value="Send" class="btn">
+            </form>
+          </div>
         </div>
       </div>
 		</main>
