--- a/contact.html
+++ b/contact.html
@@ -76,25 +76,31 @@
           <div class="contact-info"></div>
             
           <div class="contact-form">
-            <form action="">
+
+            <form id="contact-form" action="">
               <h3 class="form-title">Contact us!</h3>
               <div class="input-container">
-                <input type="text" name="name" class="input">
+                <input type="text" name="name" id="fullName" class="input all">
+                <!-- <div class="form-error" id="fullNameErr">Your name is required!</div> -->
                 <label for="">Name</label>
               </div>
               <div class="input-container">
-                <input type="email" name="email" class="input">
+                <input type="email" name="email" id="email" class="input all">
+                <!-- <div class="form-error" id="emailErr">Enter a valid e-mail!</div> -->
                 <label for="">Email</label>
               </div>
               <div class="input-container">
-                <input type="tel" name="phone" class="input">
+                <input type="tel" name="phone" class="input all">
+                <!-- <div class="form-error" id="subjectErr">Enter minimum 10 characters!</div> -->
                 <label for="">Phone</label>
               </div>
               <div class="input-container textarea">
-                <textarea name="message" class="input" cols="22" rows="5"></textarea>
+                <textarea name="message" class="input all" cols="22" rows="5"></textarea>
                 <label for="">Message</label>
               </div>
               <input type="submit" value="Send" class="btn">
+              <!-- <button class="btn all">submit</button> -->
+              <!-- <input class=" btn all reset" type="reset" value="RESET FORM"> -->
             </form>
           </div>
         </div>
