--- a/contact.html
+++ b/contact.html
@@ -74,34 +74,27 @@
 			<div class="container">
         <div class="form">
           <div class="contact-info"></div>
-            
           <div class="contact-form">
-
-            <form id="contact-form" action="">
-              <h3 class="form-title">Contact us!</h3>
-              <div class="input-container">
-                <input type="text" name="name" id="fullName" class="input all">
-                <!-- <div class="form-error" id="fullNameErr">Your name is required!</div> -->
-                <label for="">Name</label>
-              </div>
-              <div class="input-container">
-                <input type="email" name="email" id="email" class="input all">
-                <!-- <div class="form-error" id="emailErr">Enter a valid e-mail!</div> -->
-                <label for="">Email</label>
-              </div>
-              <div class="input-container">
-                <input type="tel" name="phone" class="input all">
-                <!-- <div class="form-error" id="subjectErr">Enter minimum 10 characters!</div> -->
-                <label for="">Phone</label>
-              </div>
-              <div class="input-container textarea">
-                <textarea name="message" class="input all" cols="22" rows="5"></textarea>
-                <label for="">Message</label>
-              </div>
-              <input type="submit" value="Send" class="btn">
-              <!-- <button class="btn all">submit</button> -->
-              <!-- <input class=" btn all reset" type="reset" value="RESET FORM"> -->
-            </form>
+						<form id="contact-form">
+							<h3 class="form-title">Contact us!</h3>
+							<div class="input-container">
+								<input class="all input" name="fullName" id="fullName" placeholder="NAME">
+								<div class="form-error" id="fullNameErr">Your name is required!</div>
+							</div>
+							<div class="input-container">
+								<input class="all input" name="subject" id="subject" placeholder="PHONE">
+								<div class="form-error" id="subjectErr">Enter minimum 10 characters!</div>
+							</div>
+							<div class="input-container">
+								<input class="all input" name="email" id="email" placeholder="E-MAIL">
+								<div class="form-error" id="emailErr">Enter a valid e-mail!</div>
+							</div>
+							<div class="input-container">
+								<input class="all input" name="address" id="address" placeholder="ADDRESS">
+								<div class="form-error" id="addressErr">Enter minimum 25 characters!</div>
+							</div>
+							<button class="btn all">SEND</button>
+						</form>
           </div>
         </div>
       </div>
