--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 							</div>
 							<div class="input-container">
 								<input class="all input" name="subject" id="subject" placeholder="PHONE">
-								<div class="form-error" id="subjectErr">Enter minimum 10 characters!</div>
+								<div class="form-error" id="subjectErr">Enter a valid phone number!</div>
 							</div>
 							<div class="input-container">
 								<input class="all input" name="email" id="email" placeholder="E-MAIL">
@@ -100,6 +100,7 @@
       </div>
 		</main>
 		<footer></footer>
+		<script src="/js/form.js"></script>
 		<script src="/js/main.js" type="module"></script>
 	</body>
 </html>
