--- a/contact.html
+++ b/contact.html
@@ -100,24 +100,24 @@
 					</div>
           <div class="contact-form">
 						<form id="contact-form">
-							<h3 class="form-title">Contact us!</h3>
+							<h2 class="form-title">Contact us!</h2>
 							<div class="input-container">
-								<input class="all input" name="fullName" id="fullName" placeholder="NAME">
-								<div class="form-error" id="fullNameErr">Your name is required!</div>
+								<input class="input" name="fullName" id="fullName" placeholder="NAME">
+								<div class="form-error" id="fullNameErr"></div>
 							</div>
 							<div class="input-container">
-								<input class="all input" name="subject" id="subject" placeholder="PHONE">
-								<div class="form-error" id="subjectErr">Enter a valid phone number!</div>
+								<input class="input" name="subject" id="subject" placeholder="PHONE">
+								<div class="form-error" id="subjectErr"></div>
 							</div>
 							<div class="input-container">
-								<input class="all input" name="email" id="email" placeholder="E-MAIL">
-								<div class="form-error" id="emailErr">Enter a valid e-mail!</div>
+								<input class="input" name="email" id="email" placeholder="E-MAIL">
+								<div class="form-error" id="emailErr"></div>
 							</div>
 							<div class="input-container">
-								<input class="all input" name="address" id="address" placeholder="ADDRESS">
-								<div class="form-error" id="addressErr">Enter minimum 25 characters!</div>
+								<input class="input" name="address" id="address" placeholder="ADDRESS">
+								<div class="form-error" id="addressErr"></div>
 							</div>
-							<button class="btn all">SEND</button>
+							<button class="btn reset">send</button>
 							<div class="formError red"></div>
 						</form>
           </div>
