--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <title>RainyDays|About Us</title>
 </head>
 
-<body class="body__about">
+<body class="body-about">
   <header>
     <nav>
       <div class="list-box">
@@ -66,49 +66,31 @@
     </nav>
   </header>
   <main>
-    <section class="top-section">
-      <img src="/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg"
-        alt="A birds eye view of a group of climbers going up a snowy mountain" class="background-about">
-      <div class="text__about top-text__about">
-        <p>
-          No matter the weather
-        </p>
-      </div>
-      <div>
-        <a href="#"><i class="fas fa-chevron-down arrow"></i></a>
-      </div>
-      <div class="text__about bottom-text__about1">
-        <p>
-          Our jackets will pull you through
-        </p>
-      </div>
-    </section>
-    <section class="content">
-      <div class="box">
-        <div class="img-box">
-          <img src="/images/photos/blake-cheek-dw96lVwMXJg-unsplash.jpg"
-            alt="Young person in a red rain-jacket sitting on a stone in front of a small creek with a waterfall in the background">
+    <div class="container about-container">
+      <div class="form">
+        <div class="contact-info">
+          <div>
+            <div>
+              <h2>Our story</h2>
+              <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our
+                natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond
+                with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="">
-          <p>Soon thereafter, that little shop became known as RainyDays, a retailer of performance all-weather rain
-            jackets. In1995, RainyDays moved to the other side of Humphrey Bay, to the unbridled possibilities of the
-            Riverland area, and began designing and manufacturing its own brand of rugged rain wear jackets. The rest is
-            as they say, history…</p>
+        <div class="contact-info">
+          <div>
+            <div>
+              <p>Soon thereafter, that little shop became known as RainyDays, a retailer of performance all-weather rain
+                jackets. In1995, RainyDays moved to the other side of Humphrey Bay, to the unbridled possibilities of the
+                Riverland area, and began designing and manufacturing its own brand of rugged rain wear jackets. The rest is
+                as they say, history…</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="box">
-        <div class="img-box">
-          <img src="/images/photos/nina-luong-dy4QG5c5xWQ-unsplash.jpg"
-          alt="Two people in trekking gear standing on the edge of a cliff looking out towards the mountains in front">
-        </div>
-        <div class="">
-          <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our
-            natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond
-            with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.
-          </p>
-        </div>
-      </div>
-    </section>
+    </div>
   </main>
   <script src="/js/about.js" type="mocule"></script>
   <script src="/js/main.js" type="module"></script>
