--- a/product.html
+++ b/product.html
@@ -80,7 +80,7 @@
       </div>
     </section>
   </main>
-  <script src="/js/jackets.js" type="module"></script>
+  <script src="/js/product.js" type="module"></script>
   <script src="/js/main.js"></script>
 </body>
 
