--- a/jackets.html
+++ b/jackets.html
@@ -82,7 +82,7 @@
 				</div>
 			</section>
 		</main>
-		<script src="/js/jackets.js" type="module"></script>
+		<script src="/js/products.js" type="module"></script>
 		<script src="/js/main.js" type="module"></script>
 	</body>
 </html>
