--- a/specific.html
+++ b/specific.html
@@ -67,8 +67,8 @@
     </nav>
   </header>
   <main>
-    <section class="jackets">
-      <div class="title">
+    <section class="details">
+      <!-- <div class="title">
         <h1 class="title-text">choose the one jacket you can trust</h1>
       </div>
       <div class="content products">
@@ -77,7 +77,7 @@
         <div class="cart-list"></div>
         <div class="total"><h4>Total:</h4></div>
         <a href="cart.html"><p>Checkout</p></a>
-      </div>
+      </div> -->
     </section>
   </main>
   <script src="/js/specific.js" type="module"></script>
